guestbook/frontend-ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend
  labels:
    app: guestbook
    tier: frontend
spec:
  tls:
  - hosts:
    - guestbook.pcfsdu.com
    secretName: guestbook-tls
  rules:
  - host: guestbook.pcfsdu.com
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 80
