guestbook/frontend-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend
  labels:
    app: guestbook
    tier: frontend
spec:
  rules:
  - host: guestbook.pcfsdu.com
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 80
